--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ h1 {
 .randomNumberBox{
     width: 200px;
     height: 50px;
-    background-color: green;
+    background-color: brown;
 }
 .winLoseBox{
     width: 100px;
@@ -33,5 +33,5 @@ h1 {
     background-color: red;
 }
 .inline-block {
-    display:inline-block;
+    
 }
